plugins {
    id 'java'
    id 'application'
    id 'com.dua3.javafxgradle7plugin' version '0.0.9'
}

compileJava {
    options.release.set(11)
}

startScripts {
    doLast {
        def defaultScript = '"%JAVA_EXE%" %DEFAULT_JVM_OPTS% %JAVA_OPTS% %CSSWENG_TEAM_4_OPTS%  -classpath "%CLASSPATH%" driver.Driver %*'
        def temp = defaultScript.split(" {2}")
        def newScript = "${temp[0]} --module-path \"%CLASSPATH%\" --add-modules javafx.controls,javafx.fxml ${temp[1]}" as String
        windowsScript.text = windowsScript.text.replace(defaultScript, newScript)
    }
}

application {
    getMainClass().set('driver.Driver')
}

javafx {
    version = "16"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.mongodb:mongodb-driver-sync:4.3.0'
    implementation 'ch.qos.logback:logback-classic:1.2.3'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
}

test {
    useJUnitPlatform()
}
